# webinar-openai-agents-mcp

./: .augment-guidelines  .pre-commit-config.yaml  README.md  pyproject.toml
src/code-indexing-agents/: helper.py  main.py  models.py  tools.py
src/simple-django-app/: manage.py
src/simple-django-app/tasks/: admin.py  documents.py  forms.py  models.py  urls.py  views.py
src/simple-django-app/tasks/migrations/: 0001_initial.py
src/simple-django-app/tasks/templates/tasks/: base.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_search_results.html
src/simple-django-app/todo_app/: settings.py  urls.py
